testdata/baselines/reference/submodule/compiler/importsInAmbientModules2.errors.txt
main.ts(2,19): error TS2307: Cannot find module 'external' or its corresponding type declarations.


==== external.d.ts (0 errors) ====
    export default class C {}
    
==== main.ts (1 errors) ====
    declare module "M" {
        import C from "external"
                      ~~~~~~~~~~
!!! error TS2307: Cannot find module 'external' or its corresponding type declarations.
    }